feat: add header and first screen

--- a/#source/header.html
+++ b/#source/header.html
@@ -1,9 +1,27 @@
 <header class="header">
-   <div class="header__row">
-      <div class="header__burger">
-         <span></span>
-      </div>
+   <div class="container">
 
+      <div class="header__row">
+         <div class="header__logo ibg">
+            <img src="./img/icons/Logo.svg" alt="">
+         </div>
+         <nav class="header__menu">
+            <ul class="menu__list">
+               <li><a class="menu__link" href="#1">Product</a></li>
+               <li><a class="menu__link" href="#2">Customers</a></li>
+               <li><a class="menu__link" href="#3">Pricng</a></li>
+               <li><a class="menu__link" href="#4">Resources</a></li>
+            </ul>
+         </nav>
+         <div class="header__burger">
+            <span></span>
+         </div>
+         <div class="header__sign">
+            <a href="" class="header__sign_in">Sign In</a>
+            <a href="" class="header__sign_up">Sign Up</a>
+         </div>
+
+      </div>
 
    </div>
 </header>
