--- a/index.html
+++ b/index.html
@@ -17,22 +17,63 @@
 
 
    <div class="wrapper">
-      <main class="page">
 <header class="header">
-   <div class="header__row">
-      <div class="header__burger">
-         <span></span>
-      </div>
+   <div class="container">
 
-
-   </div>
-</header>
-         <div class="main-screen">
-
+      <div class="header__row">
+         <div class="header__logo ibg">
+            <img src="./img/icons/Logo.svg" alt="">
+         </div>
+         <nav class="header__menu">
+            <ul class="menu__list">
+               <li><a class="menu__link" href="#1">Product</a></li>
+               <li><a class="menu__link" href="#2">Customers</a></li>
+               <li><a class="menu__link" href="#3">Pricng</a></li>
+               <li><a class="menu__link" href="#4">Resources</a></li>
+            </ul>
+         </nav>
+         <div class="header__burger">
+            <span></span>
+         </div>
+         <div class="header__sign">
+            <a href="" class="header__sign_in">Sign In</a>
+            <a href="" class="header__sign_up">Sign Up</a>
          </div>
 
-         <div class="content">
+      </div>
 
+   </div>
+</header>      <main class="page">
+         <section class="first-screen">
+            <div class="container">
+               <div class="first-screen__body">
+                  <div class="first-screen__offer offer">
+                     <div class="offer__title">
+                        The Design Thinking superpowers
+                     </div>
+                     <div class="offer__text">Tools, tutorials, design and innovation experts, all in one place! The
+                        most intuitive way to imagine your next user experience.
+                     </div>
+                     <div class="offer__actions">
+                        <a href="#" class="offer__actions_btn button">
+                           Get started
+                        </a>
+
+                        <a href="#" class="offer__actions_link">
+                           <img src="./img/icons/Triangle.svg" alt=""> <span> Watch the Video</span>
+                        </a>
+
+                     </div>
+
+                  </div>
+                  <div class="first-screen__image ibg">
+                     <img src="./img/Image.svg" alt="">
+                  </div>
+               </div>
+            </div>
+         </section>
+
+      </main>
 <footer class="footer">
 	<div class="container">
 		<div class="footer__row">
@@ -40,10 +81,7 @@
 		</div>
 	</div>
 	
-</footer>         </div>
-
-      </main>
-
+</footer>
       <script src="js/script.js"></script>
 
 
