feat: add tools and article sections

--- a/index.html
+++ b/index.html
@@ -73,6 +73,140 @@
             </div>
          </section>
 
+         <section class="design-tools">
+            <h2 class="design-tools__title section-title">
+               We design tools to unveil your superpowers
+            </h2>
+            <div class="container-design-tools">
+               <div class="container  ">
+                  <div class="design-tools__body">
+                     <div class="design-tools__вenefits вenefits">
+                        <div class="вenefits__item item">
+                           <div class="item__icon">
+                              <img src="./img/icons/icon.svg" alt="">
+                           </div>
+                           <h3 class="item__title section-subtitle">
+                              First click tests
+                           </h3>
+                           <div class="item__text text">
+                              While most people enjoy casino gambling,
+                           </div>
+
+                        </div>
+                        <div class="вenefits__item item">
+                           <div class="item__icon">
+                              <img src="./img/icons/icon1.svg" alt="">
+                           </div>
+                           <h3 class="item__title section-subtitle">
+                              Design surveys
+                           </h3>
+                           <div class="item__text text">
+                              Sports betting, lottery and bingo playing for the fun </div>
+                        </div>
+                        <div class="вenefits__item item">
+                           <div class="item__icon">
+                              <img src="./img/icons/icon2.svg" alt="">
+                           </div>
+                           <h3 class="item__title section-subtitle">
+                              Preference tests </h3>
+                           <div class="item__text text">
+                              The Myspace page defines the individual. </div>
+
+
+
+                        </div>
+                        <div class="вenefits__item item">
+                           <div class="item__icon">
+                              <img src="./img/icons/icon3.svg" alt="">
+                           </div>
+                           <h3 class="item__title section-subtitle">
+                              Five second tests </h3>
+                           <div class="item__text text">
+                              Personal choices and the overall personality of the person. </div>
+                        </div>
+
+                     </div>
+                     <a href="#" class="design-tools__button button">SIGN UP NOW</a>
+                  </div>
+                  <div class="background">
+
+                  </div>
+               </div>
+            </div>
+         </section>
+         <section class="articles">
+            <div class="container">
+               <div class="articles__body">
+                  <div class="articles__content content text">
+                     <span>Effortless Validation for</span>
+                     <div class="content__title section-title">
+                        Design Professionals
+                     </div>
+                     <p class="first">
+                        The Myspace page defines the individual, his or her characteristics, traits, personal choices
+                        and the overall personality of the person.
+                     </p>
+                     <h4>Accessory makers</h4>
+                     <p>
+                        While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
+                     </p>
+                     <h4>Alterationists</h4>
+                     <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+                     <h4>Custom Design designers</h4>
+                     <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+
+                  </div>
+                  <div class="articles__image ibg">
+                     <img src="./img/Image1.svg" alt="">
+                  </div>
+               </div>
+               <div class="articles__body">
+
+                  <div class="articles__image articles__image_2 ibg">
+                     <img src="./img/Image2.svg" alt="">
+                  </div>
+                  <div class="articles__content content content_2 text">
+                     <span>Easier decision making for</span>
+                     <div class="content__title section-title">
+                        Product Managers
+                     </div>
+                     <p class="first">
+                        The Myspace page defines the individual, his or her characteristics, traits, personal choices
+                        and the overall personality of the person.
+                     </p>
+                     <ul class="content__list">
+                        <li>Never worry about overpaying for your energy again. </li>
+                        <li>We will only switch you to energy companies that we trust and will treat you right</li>
+                        <li>We track the markets daily and know where the savings are.</li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="articles__body">
+                  <div class="articles__content content content_3 text">
+                     <span>Optimisation for</span>
+                     <div class="content__title section-title">
+                        Marketers
+                     </div>
+                     <p class="first">
+                        Few would argue that, despite the advancements of feminism over the past three decades, women
+                        still face a double standard when it comes to their behavior.
+                     </p>
+                     <h4>Accessory makers</h4>
+                     <p>
+                        While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
+                     </p>
+                     <h4>Alterationists</h4>
+                     <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+                     <h4>Custom Design designers</h4>
+                     <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+
+                  </div>
+                  <div class="articles__image articles__image_3 ibg">
+                     <img src="./img/Image3.svg" alt="">
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
 <footer class="footer">
 	<div class="container">
