--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
    <title>imarketing</title>
-   <meta charset=UTF-8">
+   <meta charset="UTF-8">
    <link rel="stylesheet" type="text/css" href="css/style.css">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
